--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -18,11 +18,11 @@
 </div>
 
 <script>
-    // validasi sederhana
-    if(localStorage.getItem("userRole") !== "dosen"){
-        window.location.href = "index.html";
-    }
+if(localStorage.getItem("role") !== "dosen"){
+    window.location.href = "index.html";
+}
 </script>
+
 
 </body>
 </html>
