--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,6 @@
     <p id="loginMessage"></p>
 </div>
 
-<script src="assets/js/main.js"></script>
+<script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
