--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
                 <h2>Masuk ke Akun Anda</h2>
                 <form id="loginForm">
                     <label for="email">Masukkan email anda</label>
-                    <input type="text" id="email" placeholder="Email Dosen" required>
+                    <input type="text" id="email" placeholder="example@gmail.com" required>
                     <label for="password">Masukkan password anda</label>
                     <input type="password" id="password" placeholder="Password" required>
                     <button type="submit">Masuk</button>
