Desain sidebar tambahan dan animasi untuk login dan registrasi

--- a/frontend/pages/registrasi.html
+++ b/frontend/pages/registrasi.html
@@ -24,14 +24,14 @@
 <body>
     <main>
         <!-- Judul Halaman -->
-        <div class="container-judul-aplikasi">
+        <div class="container-judul-aplikasi slide-in-top">
             <p class="icon-mikrolit"><span class="material-symbols-outlined">school</span></p>
             <h1>MikroLit LMS</h1>
             <p>Learning Management System</p>
         </div>
     
         <div class="registrasi-container">
-            <div class="registrasi-box">
+            <div class="registrasi-box fade-in">
                 <h2>Daftar Akun Anda</h2>
                 <form id="registrasiForm">
                     <label for="nama">Masukkan nama anda</label>
