--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,7 @@
         </div>
     </main>
 
+<script type="module" src="assets/js/auth.js"></script>
 <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
