Menambahkan background pada halaman login dan registrasi, menambahkan responsivitas pada halaman utama ketika berada di HP dan Tablet, menambahkan responsivitas pada card yang ada di menu beranda

--- a/frontend/pages/beranda.html
+++ b/frontend/pages/beranda.html
@@ -3,9 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Beranda - Mikrolit LMS</title>
+
+  <!-- Link ke Global CSS -->
+   <link rel="stylesheet" href="../assets/css/main.css">
+
+  <!-- Link ke CSS halaman ini (beranda.css) -->
+   <link rel="stylesheet" href="../assets/css/beranda.css">
+
+   <!-- Link untuk mengakses icon material symbols -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+
+    <!-- Link untuk mengakses font google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Link untuk mengakses font 'ASAP' dari google -->
+    <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Sarina&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>ini beranda</h1>
+  <div class="container-beranda">
+    <div class="card-beranda-wrapper">
+      <div class="card-beranda">
+        <div class="icon-judul-wrapper">
+          <h4>Total Modul</h4>
+          <p><span class="material-symbols-outlined">library_books</span></p>
+        </div>
+        <h2>12</h2>
+        <p>+2</p>
+      </div>
+
+      <div class="card-beranda">
+        <div class="icon-judul-wrapper">
+          <h4>Mahasiswa Terdaftar</h4>
+          <p><span class="material-symbols-outlined">groups</span></p>
+        </div>
+        <h2>42</h2>
+        <p>+6</p>
+      </div>
+
+      <div class="card-beranda">
+        <div class="icon-judul-wrapper">
+          <h4>Rata-rata Akses</h4>
+          <p><span class="material-symbols-outlined">timer</span></p>
+        </div>
+        <h2>2.5 Jam</h2>
+        <p>Per minggu</p>
+      </div>
+
+      <div class="card-beranda">
+        <div class="icon-judul-wrapper">
+          <h4>Penyelesaian</h4>
+          <p><span class="material-symbols-outlined">show_chart</span></p>
+        </div>
+        <h2>12</h2>
+        <p>+2</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
