Desain tampilan beranda dan responsivitasnya

--- a/frontend/pages/beranda.html
+++ b/frontend/pages/beranda.html
@@ -20,6 +20,7 @@
 
     <!-- Link untuk mengakses font 'ASAP' dari google -->
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Sarina&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div class="container-beranda">
@@ -60,6 +61,138 @@
         <p>+2</p>
       </div>
     </div>
+
+    <div class="container-chart">
+      <div class="card-progres-modul">
+        <h4>Progress Modul per Micro-Unit</h4>
+        <div id="progressChart"></div>
+      </div>
+      <div class="card-mahasiswa-terdaftar">
+        <h4>Mahasiswa Terdaftar</h4>
+        <div id="mahasiswaChart"></div>
+        <div class="daftar-mahasiswa-wrapper">
+          <div class="card-mahasiswa">
+            <div class="info-mahasiswa">
+              <h5>A Ming Lang</h5>
+              <p>07352211064</p>
+            </div>
+            <p class="icon-aktif">Aktif</p>
+          </div>
+
+          <div class="card-mahasiswa">
+            <div class="info-mahasiswa">
+              <h5>Cuppa</h5>
+              <p>073522110097</p>
+            </div>
+            <p class="icon-pasif">Pasif</p>
+          </div>
+
+          <div class="card-mahasiswa">
+            <div class="info-mahasiswa">
+              <h5>Manray</h5>
+              <p>073522110092</p>
+            </div>
+            <p class="icon-aktif">Aktif</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-list-data">
+      <div class="card-pembelajaran-terakhir">
+        <h4>Pembelajaran Terakhir</h4>
+        <div class="card-pembelajaran-terakhir-wrapper">
+
+          <div class="card-modul-terakhir">
+            <div class="icon-info-wrapper">
+              <p class="icon-modul"><span class="material-symbols-outlined">auto_stories</span></p>
+              <div class="info-modul">
+                <h5>Pengantar Literasi</h5>
+                <p>2 jam lalu</p>
+              </div>
+            </div>
+            <p class="icon-selesai">Selesai</p>
+          </div>
+
+          <div class="card-modul-terakhir">
+            <div class="icon-info-wrapper">
+              <p class="icon-modul"><span class="material-symbols-outlined">auto_stories</span></p>
+              <div class="info-modul">
+                <h5>Micro-Reader: Teks Argumentasi</h5>
+                <p>1 hari lalu</p>
+              </div>
+            </div>
+            <p class="icon-selesai">Dibuat</p>
+          </div>
+
+          <div class="card-modul-terakhir">
+            <div class="icon-info-wrapper">
+              <p class="icon-modul"><span class="material-symbols-outlined">auto_stories</span></p>
+              <div class="info-modul">
+                <h5>Reflect-Sync: Diskusi Kritis</h5>
+                <p>3 hari lalu</p>
+              </div>
+            </div>
+            <p class="icon-selesai">Selesai</p>
+          </div>
+          
+        </div>
+      </div>
+
+      <div class="card-notifikasi">
+        <h4>Notifikasi</h4>
+        <div class="card-notifikasi-wrapper">
+
+          <div class="card-notifikasi-terbaru">
+            <div class="icon-info-wrapper">
+              <p class="icon-notifikasi tugas"><span class="material-symbols-outlined">assignment</span></p>
+              <div class="info-notifikasi">
+                <h5>5 tugas baru masuk dari kelas A</h5>
+                <p>10 menit lalu</p>
+              </div>
+            </div>
+            <!-- <p class="icon-selesai">Selesai</p> -->
+          </div>
+
+          <div class="card-notifikasi-terbaru">
+            <div class="icon-info-wrapper">
+              <p class="icon-notifikasi revisi"><span class="material-symbols-outlined">schedule</span></p>
+              <div class="info-notifikasi">
+                <h5>2 permintaan revisi menunggu</h5>
+                <p>1 jam lalu</p>
+              </div>
+            </div>
+            <!-- <p class="icon-selesai">Selesai</p> -->
+          </div>
+
+          <div class="card-notifikasi-terbaru">
+            <div class="icon-info-wrapper">
+              <p class="icon-notifikasi selesai"><span class="material-symbols-outlined">assignment_turned_in</span></p>
+              <div class="info-notifikasi">
+                <h5>Peer review unit 3 selesai</h5>
+                <p>3 jam lalu</p>
+              </div>
+            </div>
+            <!-- <p class="icon-selesai">Selesai</p> -->
+          </div>
+
+          <div class="card-notifikasi-terbaru">
+            <div class="icon-info-wrapper">
+              <p class="icon-notifikasi diskusi"><span class="material-symbols-outlined">chat</span></p>
+              <div class="info-notifikasi">
+                <h5>Peer review unit 3 selesai</h5>
+                <p>3 jam lalu</p>
+              </div>
+            </div>
+            <!-- <p class="icon-selesai">Selesai</p> -->
+          </div>
+
+        </div>
+      </div>
+    </div>
+
   </div>
+
+
 </body>
 </html>
