Scroll fixing card pembelaajaran terakhir and card notifikasi

--- a/frontend/pages/beranda.html
+++ b/frontend/pages/beranda.html
@@ -133,7 +133,7 @@
                 <p>3 hari lalu</p>
               </div>
             </div>
-            <p class="icon-selesai">Selesai</p>
+            <p class="icon-selesai">Diedit</p>
           </div>
           
         </div>
